--- a/package.json
+++ b/package.json
@@ -1,53 +1,68 @@
 {
-  "name": "scouting",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "deploy": "ng build --configuration production && firebase deploy --only hosting,firestore:rules",
-    "test": "ng test",
-    "firebase:environment": "node scripts/firebase.js",
-    "create": "node scripts/create.js && npm run firebase:environment && npm run deploy"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^13.1.1",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "^13.1.1",
-    "@angular/compiler": "^13.1.1",
-    "@angular/core": "^13.1.1",
-    "@angular/fire": "^7.2.0",
-    "@angular/forms": "^13.1.1",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "^13.1.1",
-    "@angular/platform-browser-dynamic": "^13.1.1",
-    "@angular/router": "^13.1.1",
-    "@angular/service-worker": "^13.1.1",
-    "firebase": "^9.6.1",
-    "rxfire": "^6.0.3",
-    "rxjs": "^7.4.0",
-    "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^13.1.1",
-    "@angular/cli": "^13.1.1",
-    "@angular/compiler-cli": "^13.1.1",
-    "@types/jasmine": "^3.10.2",
-    "@types/node": "^17.0.2",
-    "firebase-tools": "^10.0.1",
-    "jasmine-core": "^3.10.1",
-    "karma": "^6.3.9",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.1.0",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "typescript": "^4.5.4"
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": false
-  }
+    "name": "scouting",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@craco/craco": "^6.1.1",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "axios": "^0.21.1",
+        "firebase": "^8.3.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "typescript": "^4.1.2",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "react-scripts eject",
+        "predeploy": "yarn build",
+        "deploy": "firebase deploy",
+        "deploy:firebase": "firebase deploy",
+        "deploy:schema": "node scripts/deploy-schema.js",
+        "format": "prettier -w src public"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ],
+        "rules": {
+            "semi": "off"
+        }
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "prettier": {
+        "semi": false,
+        "singleQuote": false,
+        "tabWidth": 4
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+        "@types/react-router-dom": "^5.1.7",
+        "autoprefixer": "^9",
+        "firebase-tools": "^9.8.0",
+        "postcss": "^7",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    }
 }
